--- a/locales/en.json
+++ b/locales/en.json
@@ -1213,6 +1213,32 @@
     "failed_count": "Failed Count",
     "total_count": "Total Count"
   },
+  "p_cron_jobs": {
+    "title": "Cron Jobs",
+    "job_name": "Job Name",
+    "cron_expression": "Cron Expression",
+    "next_run": "Next Run",
+    "last_status": "Last Status",
+    "is_enabled": "Is Enabled",
+    "logs": "Logs",
+    "run_now": "Run Now",
+    "execution_status": "Execution Status",
+    "reset_all_jobs": "Reset All Jobs",
+    "confirm_reset_all": "Are you sure you want to reset all cron jobs? This may affect currently running tasks.",
+    "Start": "Start",
+    "End": "End",
+    "job_description": "Job Description",
+    "cron_name": "Cron Name",
+    "cron_expression_description": "Cron Expression Description",
+    "next_run_date_time": "Next Run Date Time",
+    "run_type": "Run Type",
+    "start_date_time": "Start Date Time",
+    "end_date_time": "End Date Time",
+    "success_details": "Success Details",
+    "error_details": "Error Details",
+    "disable_now": "Disable Now",
+    "enable_now": "Enable Now"
+  },
   "p_notifications": {
     "module": "Module",
     "alert_type": "Alert Type",
