--- a/locales/en.json
+++ b/locales/en.json
@@ -553,7 +553,8 @@
     "fuel_refills_report": "Fuel Refills Report",
     "fuel_removal_report": "Fuel Removal Report",
     "daily_fuel_consumption_report": "Daily Fuel Consumption Report",
-    "monthly_fuel_consumption_report": "Monthly Fuel Consumption Report"
+    "monthly_fuel_consumption_report": "Monthly Fuel Consumption Report",
+    "bus_management": "Bus Management"
   },
   "menu_fleet": {
     "fleet_vendor": "Fleet Vendor",
