--- a/locales/en.json
+++ b/locales/en.json
@@ -620,7 +620,8 @@
     "spare_part_inventory": "Spare Part Inventory",
     "spare_part_purchase_orders": "Spare Part Purchase Orders",
     "spare_part_usage_report": "Spare Part Usage Report",
-    "student_list": "Student List",
+    "students": "Students",
+    "student": "Student",
     "bus_stops": "Bus Stops",
     "bus_routes": "Bus Routes",
     "bus_schedules": "Bus Schedules",
