--- a/locales/en.json
+++ b/locales/en.json
@@ -557,77 +557,93 @@
     "bus_management": "Bus Management"
   },
   "menu_fleet": {
-    "fleet_vendor": "Fleet Vendor",
-    "fleet_management_module": "Fleet Management Module",
-    "fleet_dashboard": "Fleet Dashboard",
-    "fleet_updates": "Fleet Updates",
+    "fleet_management": "Fleet Management",
     "vendor_management": "Vendor Management",
-    "vendors_dashboard": "Vendors Dashboard",
-    "vendors_list": "Vendors List",
-    "vendor_address": "Vendor Address",
-    "vendors_reports": "Vendors Reports",
     "vendor_dashboard": "Vendor Dashboard",
     "vendor_list": "Vendor List",
-    "vendor_document": "Vendor Document",
-    "fleet_vendor_contact_persons": "Vendor Contact Person",
-    "fleet_vendor_review": "Vendor Review",
-    "fleet_vendor_bank_account": "Vendor Bank Account",
-    "vehicle_service_centers": "Vehicle Service Centers",
+    "service_centers": "Service Centers",
+    "service_center": "Service Center",
     "fuel_stations": "Fuel Stations",
+    "fuel_station": "Fuel Station",
+    "fleet_vendor": "Fleet Vendor",
+    "vendor_address": "Vendor Address",
+    "vendor_document": "Vendor Document",
+    "vendor_contact_persons": "Vendor Contact Person",
+    "vendor_review": "Vendor Review",
+    "vendor_bank_account": "Vendor Bank Account",
     "fuel_management": "Fuel Management",
     "fuel_dashboard": "Fuel Dashboard",
     "fuel_refills": "Fuel Refills",
     "fuel_removals": "Fuel Removals",
-    "fuel_consumption_report": "Fuel Consumption Report",
-    "fuel_monthly_consumption_report": "Fuel Monthly Consumption Report",
     "issue_management": "Issue Management",
     "issue_dashboard": "Issue Dashboard",
-    "vehicle_issue_comment": "Vehicle Issue Comment",
-    "fleet_service_center": "Fleet Service Center",
     "vehicle_issues": "Vehicle Issues",
+    "vehicle_issue_comment": "Vehicle Issue Comment",
     "service_management": "Service Management",
-    "vehicle_service": "Vehicle Service",
     "service_dashboard": "Service Dashboard",
-    "vehicle_service_schedule": "Vehicle Service Schedule",
+    "service_schedule": "Service Schedule",
     "vehicle_services": "Vehicle Services",
+    "vehicle_service": "Vehicle Service",
     "service_reminders": "Service Reminders",
     "service_reminder": "Service Reminder",
     "service_tasks": "Service Tasks",
     "inspection_management": "Inspection Management",
     "inspection_dashboard": "Inspection Dashboard",
     "inspection_forms": "Inspection Forms",
-    "vehicle_inspection_schedule": "Vehicle Inspection Schedule",
+    "inspection_form": "Inspection Form",
+    "inspection_schedule": "Inspection Schedule",
     "vehicle_inspections": "Vehicle Inspections",
+    "vehicle_inspection": "Vehicle Inspection",
     "incident_management": "Incident Management",
     "incident_dashboard": "Incident Dashboard",
     "vehicle_incidents": "Vehicle Incidents",
+    "vehicle_incident": "Vehicle Incident",
     "incident_cost": "Incident Cost",
-    "bus_management": "Bus Management",
-    "bus_dashboard": "Bus Dashboard",
     "workshop_management": "Workshop Management",
     "workshop_dashboard": "Workshop Dashboard",
-    "workshops": "Workshops",
+    "fleet_workshops": "Fleet Workshops",
+    "fleet_workshop": "Fleet Workshop",
     "tyre_management": "Tyre Management",
-    "fleet_tyre_dashboard": "Fleet Tyre Dashboard",
-    "fleet_tyre_inventory": "Fleet Tyre Inventory",
-    "fleet_axle_template": "Fleet Axle Template",
-    "fleet_tyre_usage_history": "Fleet Tyre Usage History",
-    "fleet_tyre_inspection_schedule": "Fleet Tyre Inspection Schedule",
-    "fleet_tyre_inspections": "Fleet Tyre Inspections",
-    "spare_part_management": "Spare Part Management",
-    "spare_part_dashboard": "Spare Part Dashboard",
-    "spare_part_master": "Spare Part Master",
-    "spare_part_inventory": "Spare Part Inventory",
-    "spare_part_purchase_orders": "Spare Part Purchase Orders",
-    "spare_part_usage_report": "Spare Part Usage Report",
-    "students": "Students",
-    "student": "Student",
+    "tyre_dashboard": "Tyre Dashboard",
+    "tyre_inventory": "Tyre Inventory",
+    "tyre_axle_template": "Tyre Axle Template",
+    "tyre_usage_history": "Tyre Usage History",
+    "tyre_inspection_schedule": "Tyre Inspection Schedule",
+    "tyre_inspections": "Tyre Inspections",
+    "tyre_inspection": "Tyre Inspection",
+    "spare_parts_management": "Spare Parts Management",
+    "spare_parts_dashboard": "Spare Parts Dashboard",
+    "spare_parts_master": "Spare Parts Master",
+    "spare_part": "Spare Part",
+    "spare_parts_inventory": "Spare Parts Inventory",
+    "spare_parts_purchase_orders": "Spare Parts Purchase Orders",
+    "spare_parts_purchase_order": "Spare Parts Purchase Order",
+    "spare_parts_usage_report": "Spare Parts Usage Report",
+   
+     "school_management": "School Management",
+       "school_dashboard": "School Dashboard",
+        "school_noticeboard": "School Noticeboard",
+          "noticeboard": "Noticeboard",
+           "school_holidays": "School Holidays",
+            "holiday": "Holiday",
+        "students_list": "Students List",
+          "student": "Student",
+           "leave_requests": "Levae Requests",
+            "leave_request": "Levae Request",
+            "route_change_requests": "Route Change Requests",
+             "route_change_request": "Route Change Request",
+   
+    "bus_management": "Bus Management",
+    "bus_dashboard": "Bus Dashboard",
+    "fleet_settings": "Feeet Settings",
     "bus_stops": "Bus Stops",
+     "bus_stop": "Bus Stop",
     "bus_routes": "Bus Routes",
-    "bus_schedules": "Bus Schedules",
-    "bus_stop": "Bus Stop",
     "bus_route": "Bus Route",
-    "bus_schedule": "Bus Schedule"
+    "bus_schedules": "Bus Schedules",
+    "bus_schedule": "Bus Schedule",
+        "bus_daily_runs": "Bus Daily Runs",
+    "bus_daily_run": "Bus Daily Run"
   },
   "menu_trips": {
     "trip_management": "Trip Management",
@@ -2316,7 +2332,6 @@
     "incidents": "Incidents"
   },
   "p_fleet_fuel_station": {
-    "fuel_station": "Fuel Station",
     "fuel_station_name": "Fuel Station Name",
     "fuel_station_code": "Fuel Station Code",
     "is_company_owned": "Is Company Owned",
