--- a/locales/en.json
+++ b/locales/en.json
@@ -491,6 +491,8 @@
   "menu_gps": {
     "main_module": "Main Module",
     "vehicles": "Vehicles",
+    "buses": "Buses",
+    "documents": "Documents",
     "drivers": "Drivers",
     "users": "Users",
     "gps_module": "GPS Module",
@@ -619,30 +621,28 @@
     "spare_parts_purchase_orders": "Spare Parts Purchase Orders",
     "spare_parts_purchase_order": "Spare Parts Purchase Order",
     "spare_parts_usage_report": "Spare Parts Usage Report",
-   
-     "school_management": "School Management",
-       "school_dashboard": "School Dashboard",
-        "school_noticeboard": "School Noticeboard",
-          "noticeboard": "Noticeboard",
-           "school_holidays": "School Holidays",
-            "holiday": "Holiday",
-        "students_list": "Students List",
-          "student": "Student",
-           "leave_requests": "Levae Requests",
-            "leave_request": "Levae Request",
-            "route_change_requests": "Route Change Requests",
-             "route_change_request": "Route Change Request",
-   
+    "school_management": "School Management",
+    "school_dashboard": "School Dashboard",
+    "school_noticeboard": "School Noticeboard",
+    "noticeboard": "Noticeboard",
+    "school_holidays": "School Holidays",
+    "holiday": "Holiday",
+    "students_list": "Students List",
+    "student": "Student",
+    "leave_requests": "Levae Requests",
+    "leave_request": "Levae Request",
+    "route_change_requests": "Route Change Requests",
+    "route_change_request": "Route Change Request",
     "bus_management": "Bus Management",
     "bus_dashboard": "Bus Dashboard",
     "fleet_settings": "Feeet Settings",
     "bus_stops": "Bus Stops",
-     "bus_stop": "Bus Stop",
+    "bus_stop": "Bus Stop",
     "bus_routes": "Bus Routes",
     "bus_route": "Bus Route",
     "bus_schedules": "Bus Schedules",
     "bus_schedule": "Bus Schedule",
-        "bus_daily_runs": "Bus Daily Runs",
+    "bus_daily_runs": "Bus Daily Runs",
     "bus_daily_run": "Bus Daily Run"
   },
   "menu_trips": {
