--- a/locales/en.json
+++ b/locales/en.json
@@ -576,11 +576,15 @@
     "fuel_management": "Fuel Management",
     "fuel_dashboard": "Fuel Dashboard",
     "fuel_refills": "Fuel Refills",
+    "fuel_refill": "Fuel Refill",
     "fuel_removals": "Fuel Removals",
+    "fuel_removal": "Fuel Removal",
     "issue_management": "Issue Management",
     "issue_dashboard": "Issue Dashboard",
     "vehicle_issues": "Vehicle Issues",
-    "vehicle_issue_comment": "Vehicle Issue Comment",
+    "vehicle_issue": "Vehicle Issue",
+    "issue_comments": "Issue Comments",
+    "issue_comment": "Issue Comment",
     "service_management": "Service Management",
     "service_dashboard": "Service Dashboard",
     "service_schedule": "Service Schedule",
@@ -589,6 +593,7 @@
     "service_reminders": "Service Reminders",
     "service_reminder": "Service Reminder",
     "service_tasks": "Service Tasks",
+    "service_task": "Service Task",
     "inspection_management": "Inspection Management",
     "inspection_dashboard": "Inspection Dashboard",
     "inspection_forms": "Inspection Forms",
@@ -600,6 +605,7 @@
     "incident_dashboard": "Incident Dashboard",
     "vehicle_incidents": "Vehicle Incidents",
     "vehicle_incident": "Vehicle Incident",
+    "incident_costs": "Incident Costs",
     "incident_cost": "Incident Cost",
     "workshop_management": "Workshop Management",
     "workshop_dashboard": "Workshop Dashboard",
