--- a/locales/en.json
+++ b/locales/en.json
@@ -567,10 +567,15 @@
     "fuel_stations": "Fuel Stations",
     "fuel_station": "Fuel Station",
     "fleet_vendor": "Fleet Vendor",
+    "vendor_addresses": "Vendor Addresses",
     "vendor_address": "Vendor Address",
+    "vendor_documents": "Vendor Documents",
     "vendor_document": "Vendor Document",
-    "vendor_contact_persons": "Vendor Contact Person",
+    "vendor_contact_persons": "Vendor Contact Persons",
+    "vendor_contact_person": "Vendor Contact Person",
+    "vendor_reviews": "Vendor Reviews",
     "vendor_review": "Vendor Review",
+    "vendor_bank_accounts": "Vendor Bank Accounts",
     "vendor_bank_account": "Vendor Bank Account",
     "fuel_management": "Fuel Management",
     "fuel_dashboard": "Fuel Dashboard",
