--- a/locales/en.json
+++ b/locales/en.json
@@ -426,9 +426,9 @@
     "master_main_unit_distance": "Master Unit Distance",
     "master_main_unit_mileage": "Master Unit Mileage",
     "master_main_unit_volume": "Master Unit Volume",
-    "master_fasttag_bank": "Master Fasttag Bank",
-    "master_ewaybill_provider": "Master Ewaybill Provider",
-    "master_sim_provider": "Master Sim Provider",
+    "master_main_fasttag_bank": "Master Fasttag Bank",
+    "master_main_ewaybill_provider": "Master Ewaybill Provider",
+    "master_main_sim_provider": "Master Sim Provider",
     "master_main_landmark": "Master Landmark",
     "master_device": "Master Device",
     "master_device_manufacturer": "Device Manufacturer",
